--- a/src/make_order_page/OrderDeal.css
+++ b/src/make_order_page/OrderDeal.css
@@ -6,10 +6,68 @@
    border: 1px solid black;
    display:grid;
    grid-template-columns: auto;
-   padding: 0 10px;
+   padding: 0 0px;
+   overflow: hidden;
 }
 
 .odsection{
     display: inline-block;
+    text-align: center;
     grid-row:1;
+    position: relative;
+    
 }
+
+
+
+.odsection text{
+    font-size:14px;
+    color: black;
+}
+
+.oddone{
+    background-color: #69CB00;
+    position:absolute;
+    top: 0;
+    left:0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    animation-name: anod;
+    animation-duration: 1s;
+}
+
+@keyframes anod {
+    from {width: 0%;}
+    to {width: 100%;}
+  }
+
+.odsection .odwhite{
+    color:white;
+    animation-name: anod2;
+    animation-duration: 1s;
+    
+}
+@keyframes anod2 {
+    from {color:black;}
+    to {color: white;}
+  }
+
+  .odbox{
+    position: absolute;
+    right: -2px;
+    top:50%;
+    transform: translate(0%,-50%);
+    width: 2px;
+    height:60%;
+  }
+
+  .odboxblack{
+    background-color:black;
+  }
+
+  .odboxwhite{
+    background-color:white;
+  }
+
+  
