--- a/src/menu_page/Checkout.css
+++ b/src/menu_page/Checkout.css
@@ -30,11 +30,12 @@
     margin: 0 auto;
     font-size: 12px;
     text-decoration: underline;
+    position: relative;
 }
 
 .cooreder-title{
     text-align:left;
-    margin: 10px;
+    margin: 10px 5%;
     font-weight: 700;
     font-size:20px;
 }
@@ -44,14 +45,28 @@
     font-size: 120px;
 }
 
+
+
+.cotf{
+    width:90%;
+}
+
+.cotfcn{
+    width:60%;
+    margin-right: 5px;
+}
+
+.cotfcvv{
+    width:30%;
+}
+
 .cobtn {
     background-color: #F26522;
-    margin-top: 20px;
+    margin-top: 10px;
     padding:10px 0;
 }
 
-.cobtn a , .cobtn a:hover{
+.cobtn text{
     color:white;
-    text-decoration: none;
     font-size: 20px;
 }
