--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
     width:100%;
     min-height: 100vh;
     max-height: 100%;
+    background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
