--- a/src/make_order_page/OrderDeal.css
+++ b/src/make_order_page/OrderDeal.css
@@ -1,5 +1,5 @@
 .odprogressbar{
-    width: 80%;
+    width: 90%;
     height:30px;
     margin: 5px auto;
     border-radius:20px;
@@ -11,18 +11,19 @@
 }
 
 .odsection{
-    display: inline-block;
-    text-align: center;
-    grid-row:1;
-    position: relative;
+  display: inline-block;
+  text-align: center;
+  grid-row:1;
+  position: relative;
     
 }
 
 
 
 .odsection text{
-    font-size:14px;
-    color: black;
+  font-size:12px;
+  font-weight: 700;
+  color: black;
 }
 
 .oddone{
@@ -55,7 +56,7 @@
 
   .odbox{
     position: absolute;
-    right: -2px;
+    right: -3px;
     top:50%;
     transform: translate(0%,-50%);
     width: 2px;
