--- a/src/menu_page/MenuPage.css
+++ b/src/menu_page/MenuPage.css
@@ -4,10 +4,15 @@
     background-color: white;
     text-align: center;
     opacity: 0.9;
+    height: 80%;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translate(-50%, -0);
 }
 
 .mescroll{
-    height: 100vh;
+    height: 91%;
     overflow-y: auto; 
 
 }
