--- a/src/menu_page/orderItem.css
+++ b/src/menu_page/orderItem.css
@@ -4,11 +4,12 @@
     margin:0 auto;
     margin-bottom:20px;
     padding: 0 10px;
-    padding-top: 20px;
+    padding-top: 10px;
     border: 1px solid #e5e5e5 ;
 }
 
 .oicard h1{
+    margin-top: 10px;
     font-size:18px;
     font-weight: 700;
     text-align:left;
@@ -33,9 +34,8 @@
 }
 
 .oibuttons{
-    position:absolute;
-    right: 15px;
-    top: 10px;
+    font-size:20px;
+    text-align: right;
 }
 
 .oicancel{
