--- a/src/menu_page/MenuPage.css
+++ b/src/menu_page/MenuPage.css
@@ -33,4 +33,23 @@
     margin-top:0;
 }
 
+@media only screen and (min-width: 768px) {
+    .megrid{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .mesection{
+        margin-bottom: 40px;
+    }
+
+
+}
+
+@media only screen and (min-width: 992px) {
+    .megrid{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    } 
+}
+
 
