--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,14 @@
 .col-12, .col-md-4{
     padding:0;
 } 
+
+button{
+    cursor: pointer;
+    border: none; 
+    background-color:Transparent;
+}
+
+button:focus{
+    outline:none;
+}
+
