--- a/src/make_order_page/ChooseBox.css
+++ b/src/make_order_page/ChooseBox.css
@@ -33,6 +33,24 @@
     height: 75px;
 }
 
+#cbhalf{
+    width: 37.5px;
+    height: 75px;
+}
+
+#cbqudiv{
+    width:75px;
+    height: 75px;
+    position :relative;
+    display: inline-block;
+}
+
+#cbqu{
+    width:37.5px;
+    height:37.5px;
+    position:absolute;
+}
+
 .cbcard text{
     position: absolute;
     bottom:0;
@@ -52,4 +70,87 @@
     font-size:18px;
     font-weight: 700;
     text-decoration: none;
+}
+
+
+@media only screen and (min-width: 768px) {
+    .cbtitle{
+        font-size:28px;
+    }
+
+    .cbcard{
+        height:160px; 
+    }
+
+    .cbcard img{
+        width: 100px;
+        height: 100px;
+    }
+
+    #cbhalf{
+        width: 50px;
+        height: 100px;
+    }
+
+    #cbqudiv{
+        width:100px;
+        height: 100px;
+        position :relative;
+        display: inline-block;
+    }
+    
+    #cbqu{
+        width:50px;
+        height:50px;
+        position:absolute;
+    }
+
+    .cbcancel a{
+        font-size:22px;
+    }
+}
+
+
+@media only screen and (min-width: 992px) {
+    .cbtitle{
+        font-size:30px;
+    }
+
+    .cbcard{
+        height:180px; 
+    }
+
+    .cbcard img{
+        width: 120px;
+        height: 120px;
+    }
+
+    #cbhalf{
+        width: 70px;
+        height: 120px;
+    }
+
+    #cbqudiv{
+        width:120px;
+        height: 120px;
+        position :relative;
+        display: inline-block;
+    }
+    
+    #cbqu{
+        width:70px;
+        height:70px;
+        position:absolute;
+    }
+
+    .cbcancel a{
+        font-size:24px;
+    }
+}
+
+
+@media only screen and (min-width: 1200px) {
+    .cbcontent{
+        width:80%;
+    }
 }
