--- a/src/make_order_page/OrderSalad.css
+++ b/src/make_order_page/OrderSalad.css
@@ -14,8 +14,8 @@
 }
 
 .osimg{
-    width: 100%;
-    height: 100%;
+    width: 200px;
+    height: 200px;
 }
 
 .oscontent{
@@ -37,4 +37,54 @@
 
 .osbtn{
     grid-column: 1/3;
+}
+
+
+@media only screen and (min-width: 768px) {
+
+    .ostitle h3{
+        font-size:32px;
+    }
+
+    .osimg{
+        width: 300px;
+        height: 300px;
+    }
+
+    .osli{
+        font-size:20px;
+    }
+
+}
+
+
+@media only screen and (min-width: 992px) {
+    
+    .ostitle h3{
+        font-size:36px;
+    }
+
+    .osimg{
+        width: 400px;
+        height: 400px;
+    }
+
+    .osli{
+        font-size:26px;
+    }
+
+}
+
+@media only screen and (min-width: 1200px) {
+    
+    .oscontent {
+        justify-content: flex-start	;
+    }
+
+    
+    .osimg{
+        width: 500px;
+        height: 500px;
+    }
+
 }
