--- a/src/menu_page/Checkout.css
+++ b/src/menu_page/Checkout.css
@@ -8,6 +8,7 @@
 }
 
 .creturn{
+    color: black;
     display: block;
     text-align: right;
     margin-bottom: 10px;
@@ -16,12 +17,20 @@
     top:5px;
 }
 
+.creturn:hover{
+    text-decoration: none;
+    color: black;
+}
+
 .codr{
     width:80%;
     margin: 0 auto;
     padding: 5px 0;
     border: 1px solid #DBDDE0;
 }
+
+
+
 
 .codrme{
     width:100%;
@@ -42,6 +51,11 @@
     position: relative;
 }
 
+.coselect button{
+    text-decoration: underline;
+}
+
+
 .cooreder-title{
     text-align:left;
     margin: 10px 5%;
@@ -52,13 +66,17 @@
 .coamount{
     display: block;
     text-align: right;
-    position: relative;
-    right:10px;
+    margin-right: 5%;
     font-size: 16px;
     font-weight: 700;
 }
 
 .copayment{
+    width: 70%;
+    margin-left: 3%;
+}
+
+.copaymenttitle{
     text-align:left;
     margin: 10px 5%;
     font-weight: 700;
@@ -86,12 +104,93 @@
 }
 
 .cobtn {
+    width: 100%;
     background-color: #F26522;
+    color: white;
     margin-top: 10px;
     padding:10px 0;
+    font-size: 20px;
 }
 
-.cobtn text{
-    color:white;
-    font-size: 20px;
+
+
+
+@media only screen and (min-width: 992px) {
+    .creturn{
+        font-size:18px;
+    }
+
+    .codr{
+        width:60%;
+    }
+
+    .codr a{
+        font-size:18px;
+    }
+
+    .coselect{
+        font-size: 14px;
+    }
+
+    .cooreder-title{
+        font-size:24px;
+    }
+
+    .coamount{
+        font-size: 20px;
+    }
+
+    .cobtn{
+        font-size: 24px;
+    }
+
+    .copayment{
+        width: 60%;
+    }
+
+    .copaymenttitle{
+        font-size:24px;
+    }
+
+}
+
+
+
+@media only screen and (min-width: 1200px) {
+
+    .creturn{
+        font-size:20px;
+    }
+
+    .codr{
+        width:60%;
+    }
+
+    .codr a{
+        font-size:20px;
+    }
+
+    .coselect{
+        font-size: 16px;
+    }
+
+    .cooreder-title{
+        font-size:26px;
+    }
+
+    .coamount{
+        font-size: 22px;
+    }
+
+    .cobtn{
+        font-size: 26px;
+    }
+    .copayment{
+        width: 40%;
+    }
+
+    .copaymenttitle{
+        font-size:26px;
+    }
+
 }
