--- a/src/menu_page/DropDown.css
+++ b/src/menu_page/DropDown.css
@@ -36,3 +36,24 @@
 .dropdown.show .drop-icon{
     transform: rotate(0deg);
 }
+
+
+@media only screen and (min-width: 768px){
+    .drbtn ,.drbtn:hover {
+        font-size: 24px;
+    }
+    .dropdown-item{
+        font-size:18px;
+    }
+}
+
+@media only screen and (min-width: 992px){
+    .drbtn ,.drbtn:hover {
+        font-size: 26px;
+    }
+
+    .dropdown-item{
+        font-size:20px;
+    }
+}
+
