--- a/src/menu_page/orderItem.css
+++ b/src/menu_page/orderItem.css
@@ -41,3 +41,37 @@
 .oicancel{
     margin-left: 10px;
 }
+
+
+@media only screen and (min-width: 992px) {
+
+    .oicard h1{
+        font-size:20px;
+    }
+
+    .oicard li{
+        font-size:18px;
+    }
+
+    .oicard p{
+        font-size: 18px;
+    }
+
+}
+
+
+@media only screen and (min-width: 1200px) {
+
+    .oicard h1{
+        font-size:24px;
+    }
+
+    .oicard li{
+        font-size:20px;
+    }
+
+    .oicard p{
+        font-size: 20px;
+    }
+
+}
