--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,41 @@
 
 }
 
+button {
+    cursor: pointer;
+    border: none;
+    background-color: Transparent;
+}
 
+button:focus {
+    outline: none;
+}
+
+a,a:hover {
+    text-decoration: none;
+    color: black;
+}
+
+.link {
+    background-color: #F26522;
+    color: white;
+    padding: 20px 30px;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.page {
+    width: 80%;
+    height: 80%;
+    margin: 0 auto;
+    background-color: white;
+    opacity: 0.9;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translate(-50%, -0);
+    overflow-y: auto;
+}
 
 .background{
     width:100%;
@@ -34,13 +68,5 @@
     padding:0;
 } 
 
-button{
-    cursor: pointer;
-    border: none; 
-    background-color:Transparent;
-}
 
-button:focus{
-    outline:none;
-}
 
