--- a/src/Pages/AboutUs/AboutUs.css
+++ b/src/Pages/AboutUs/AboutUs.css
@@ -1,47 +1,31 @@
-
-
-.abscontent{
-    width: 80%;
-    margin: 0 auto;
-    padding: 10px 10px;
-    background-color: white;
-    opacity: 0.9;
-}
-
-.absgrid{
-    display: grid;
+.about-us{
+    display: flex;
     column-gap: 25px;
-    grid-template-columns: auto;
+    padding: 20px;
 }
 
-.abscol1{
-    grid-row: 1;
-}
 
-.abscol2{
-    grid-row: 2;
-}
-
-.absp text{
+.about-us h4{
   color: #F26522;
   font-weight: 700;
 
 }
 
-.absp p{
+.about-us p{
     font-size:14px;
 }
 
-.abscol2{
+.about-us__images{
+    width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
+    gap:20px;
+    align-items: center;
 }
 
-.abspic{
-    width: 100px;
-    height: 100px;
-    background-position: fixed;
-    background-size: cover;
+.about-us__images img{
+    max-width: 200px;
     border: 2px solid white;
     box-sizing: border-box;
     filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.5));
@@ -50,70 +34,8 @@
 
 
 
-@media screen and (min-width: 750px) {
-    .abscontent{
-        padding: 20px;
-    }
-    .abscol1{
-        grid-column: 1;
-        grid-row: 1;
-    }
-    .abscol2{
-        grid-column: 2;
-        grid-row: 1;
-    }
-    .abscol2{
+@media screen and (max-width: 768px) {
+    .about-us{
         flex-direction: column;
     }
-
-    .absp text{
-        font-size: 20px;
-      }
-      
-    .absp p{
-          font-size:14px;
-    }
-
-    .abspic{
-        width:175px;
-        height: 175px;
-    }
-
-}
-
-
-@media screen and (min-width: 992px) {
-
-    .absp text{
-        font-size: 22px;
-      }
-      
-    .absp p{
-          font-size:16px;
-    }
-
-    .abspic{
-        width:200px;
-        height: 200px;
-    }
-
-}
-
-
-@media screen and (min-width: 1200px) {
-
-    .absp text{
-        font-size: 24px;
-      }
-      
-    .absp p{
-          font-size:18px;
-    }
-
-    .abspic{
-        width:225px;
-        height: 225px;
-        margin-bottom: 20px;
-    }
-
 }
