--- a/src/Pages/Menu/DropDown.css
+++ b/src/Pages/Menu/DropDown.css
@@ -1,59 +1,35 @@
-
-.dr{
-    padding: 10px 0;
-    margin-bottom: 10px;
+.dropdown{
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
     background-color: white;
-    height:7%;
+    text-align: center;
+    z-index: 1;
 }
 
-.drbtn , .drbtn:hover{
-    color: black;
-    text-decoration: none;
+.dropdown__button{
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 10px 0;
     font-size: 20px;
 }
 
-.drme{
-    width:100%;
+.dropdown__items{
+    width: 100%;
     text-align: center;
-    border:0;
-    will-change: transform !important;
-    position: absolute !important;
-    transform: translate3d(0px, 38px, 0px) !important;
-    top: 0px !important;
-    left: 0px !important;
+    margin: 0px;
+    border: none;
+    transform: translate3d(0, 44px, 0px) !important;
 }
 
-.dropdown-menu hr{
-    width: 80%;
-    margin: 8px auto;
+.dropdown__items a{
+    font-size: 18px;
 }
 
-.dropdown .drop-icon{
-    transform: rotate(180deg);
+.dropdown__items a:not(:last-child){
+    border-bottom: 1px solid;
 }
 
-
-.dropdown.show .drop-icon{
-    transform: rotate(0deg);
-}
-
-
-@media only screen and (min-width: 768px){
-    .drbtn ,.drbtn:hover {
-        font-size: 24px;
-    }
-    .dropdown-item{
-        font-size:18px;
-    }
-}
-
-@media only screen and (min-width: 992px){
-    .drbtn ,.drbtn:hover {
-        font-size: 26px;
-    }
-
-    .dropdown-item{
-        font-size:20px;
-    }
-}
 
